--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ h1, h2, h3 {
 }
 
 input[type=text], select {
-    width: 50%;
+    width: 40%;
     padding: 5px 5px;
     margin: 8px 0;
     display: inline-block;
@@ -23,7 +23,7 @@ input[type=submit] {
     background-color: #4CAF50;
     color: white;
     padding: 8px 20px;
-    margin: 8px 0;
+    margin: 8px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -37,7 +37,7 @@ button {
   background-color: steelblue;
     color: white;
     padding: 8px 20px;
-    margin: 8px 0;
+    margin: 8px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
